deploy/k8s/overlays/staging/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: api
    annotations:
        kubernetes.io/ingress.class: gce
        kubernetes.io/ingress.global-static-ip-name: mushee-api-staging-ip
        networking.gke.io/managed-certificates: api-cert-solkey
        networking.gke.io/v1beta1.FrontendConfig: api-frontend
spec:
    rules:
        - host: api.staging.solkey.io
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: api
                            port:
                                number: 80
